force-app/main/default/objects/Committee__c/Committee__c.object-meta.xml
<CustomObject>
    <label>Committee</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Committee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>