force-app/main/default/objects/Committee__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <label>Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Committee Application</fullName>
            </value>
            <value>
                <fullName>Cybersecurity, Privacy &amp; Security</fullName>
            </value>
            <value>
                <fullName>Digital Health Advisory Group for Europe</fullName>
            </value>
            <value>
                <fullName>Global Health Conference Education</fullName>
            </value>
            <value>
                <fullName>HIMSS Professional Certification Board</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Interoperability &amp; Health Information Exchange</fullName>
            </value>
            <value>
                <fullName>Long-Term and Post-Acute Care</fullName>
            </value>
            <value>
                <fullName>Nursing Informatics</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>Public Policy</fullName>
            </value>
            <value>
                <fullName>Social Determinants of Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>