force-app/main/default/objects/Committee__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Committee</relationshipLabel>
    <relationshipName>Committee</relationshipName>
    <type>Lookup</type>
</CustomField>