force-app/main/default/objects/Committee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Member-at-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>