force-app/main/default/objects/Committee__c/fields/Term_length__c.field-meta.xml
<CustomField>
    <fullName>Term_length__c</fullName>
    <label>Term length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>